Fix emoji reaction button spacing on some layouts

--- a/app/javascript/flavours/glitch/styles/modern-urusai-fixes.scss
+++ b/app/javascript/flavours/glitch/styles/modern-urusai-fixes.scss
@@ -94,6 +94,10 @@ body.app-body.flavour-glitch > #mastodon .notification-ungrouped {
 
 .status__action-bar {
   margin-bottom: unset !important;
+
+  .emoji-picker-dropdown {
+    width: 100% !important;
+  }
 }
 
 @media (width <= 889px) {
